fix(theme-base10): toolbar should wrap if too wide (see annotations)

--- a/profiles/theme-base10/resources/css/base.css
+++ b/profiles/theme-base10/resources/css/base.css
@@ -110,6 +110,8 @@ pb-page[unresolved]~.splash {
     --paper-checkbox-label-color: var(--jinks-toolbar-color);
     --paper-checkbox-unchecked-color: var(--jinks-toolbar-color);
     padding: 1rem 1.5rem;
+    flex-wrap: wrap;
+    row-gap: var(--s-1);
 }
 
 .toolbar li {
